Bug 515391 - Modifying the budget year is not possible
Summary: Modifying the budget year is not possible
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-01 15:08 UTC by Thomas Baumgart
Modified: 2026-02-01 15:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2026-02-01 15:08:14 UTC
SUMMARY

Once a budget is created, its budget year cannot be modified.

STEPS TO REPRODUCE
1. Copy a budget
2. Try to modify the year to the following

OBSERVED RESULT
Unable to change year

EXPECTED RESULT
Year can be changed to any valid value

ADDITIONAL INFORMATION
See https://discuss.kde.org/t/copy-buget-to-set-up-budget-2026-with-values-of-2025/43861
Comment 1 Thomas Baumgart 2026-02-01 15:13:39 UTC
Git commit 76c40b4c82ff1faafc2022161ceda2f9dc66f1fd by Thomas Baumgart.
Committed on 01/02/2026 at 15:12.
Pushed by tbaumgart into branch 'master'.

Allow to modify the budget year when the first fiscal month is january
FIXED-IN: 5.2.2

M  +1    -1    kmymoney/plugins/views/budget/kbudgetview.cpp

https://invent.kde.org/office/kmymoney/-/commit/76c40b4c82ff1faafc2022161ceda2f9dc66f1fd
Comment 2 Thomas Baumgart 2026-02-01 15:15:14 UTC
Git commit a1eb8c334aad96e16de40f32ad4b272025cd962a by Thomas Baumgart.
Committed on 01/02/2026 at 15:13.
Pushed by tbaumgart into branch '5.2'.

Allow to modify the budget year when the first fiscal month is january
FIXED-IN: 5.2.2
(cherry picked from commit 76c40b4c82ff1faafc2022161ceda2f9dc66f1fd)

M  +1    -1    kmymoney/plugins/views/budget/kbudgetview.cpp

https://invent.kde.org/office/kmymoney/-/commit/a1eb8c334aad96e16de40f32ad4b272025cd962a