Allow to modify the budget year when the first fiscal month is january

BUG: 515391
FIXED-IN: 5.2.2